--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "vite-project",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "lit": "^3.2.1"
-  },
-  "devDependencies": {
-    "typescript": "~5.6.2",
-    "vite": "^5.4.10"
-  }
+	"name": "vite-project",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"lint": "eslint --fix .",
+		"prepare": "husky"
+	},
+	"dependencies": {
+		"lit": "^3.2.1"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.15.0",
+		"eslint": "^9.15.0",
+		"eslint-plugin-lit-a11y": "^4.1.4",
+		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-plugin-unused-imports": "^4.1.4",
+		"globals": "^15.12.0",
+		"husky": "^9.1.7",
+		"prettier": "3.3.3",
+		"typescript": "~5.6.2",
+		"typescript-eslint": "^8.15.0",
+		"vite": "^5.4.10"
+	}
 }
