--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
+		"dev": "npx lit-localize extract && vite",
+		"build": "npx lit-localize extract && tsc && vite build",
 		"preview": "vite preview",
 		"lint": "eslint --fix .",
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"@lit/localize": "^0.12.2",
 		"@vaadin/router": "^2.0.0",
 		"date-fns": "^4.1.0",
 		"lit": "^3.2.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.15.0",
+		"@lit/localize-tools": "^0.8.0",
 		"eslint": "^9.15.0",
 		"eslint-plugin-lit-a11y": "^4.1.4",
 		"eslint-plugin-prettier": "^5.2.1",
